fix work list item stylings and remove the background and list gap

--- a/src/components/WorkList/worklist.module.css
+++ b/src/components/WorkList/worklist.module.css
@@ -1,18 +1,22 @@
-@keyframes spin {
-    0% {
-    }
+/*@keyframes spin {
+    0% {}
     100% {
         transform: rotate(360deg);
     }
 }
 
 .background {
-    background-image: radial-gradient(
-        var(--color-theme-primary-900) 1px,
-        transparent 1px
-    );
+    background-image: radial-gradient(var(--color-theme-primary-900) 1px,
+            transparent 1px);
     filter: blur(1px);
     background-size: 20px 20px;
     background-color: transparent;
     animation: spin 400s linear infinite forwards;
+}
+*/
+.listitem {
+    @apply border-b-2;
+    &:nth-child(1) {
+        @apply border-t-2;
+    }
 }
